crates/wac-parser/tests/resolution/fail/duplicate-use-in-interface.wac
package foo:bar;

interface i {
    type x = u32;
}

interface i2 {
    x: func();
    use i.{x};
}
